# Tree-Ops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1dde04ee4797_initial_schema_with_tree_node_table.py
app/: config.py  main.py  middleware.py
app/lib/: health.py
app/lib/db/: session.py
app/ops/: README.md  schemas.py
app/ops/entities/: tree_node.py
app/ops/perf/: db_utils.py  generator.py  runner.py
app/ops/routes/: stats.py  tree.py
app/ops/services/: tree_service.py
app/ops/stats/: collector.py  middleware.py  redis_service.py  registry.py
docker/: init.sql
schemas/: 001_init.sql
scripts/: tree-perf
tests/: conftest.py  test_tree_endpoints.py
tests/factories/: __init__.py  base.py  tree_node.py
