[project]
name = "tree-ops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.4",
  "anyio>=4.7.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.116.1",
  "hiredis>=3.2.1",
  "lexorank>=0.1.1",
  "molotov>=2.6",
  "psutil>=7.0.0",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.8.2",
  "python-dotenv>=1.0.1",
  "redis>=6.4.0",
  "rich>=14.1.0",
  "sqlalchemy[asyncio]>=2.0.42",
  "uvicorn[standard]>=0.35.0",
]

[tool.uv]
dev-dependencies = [
  "factory-boy>=3.3.0",
  "pytest-factoryboy>=2.6.0",
  "httpx>=0.28.1",
  "pyright>=1.1.403",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.8",
  "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long
    "E712",   # comparison to True/False
    "E721",   # type comparison
]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
